--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
             <div class="overlay"></div>
             <!-- Google Map embed code goes here -->
             <div class="map__frame h-100">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7866.998502262171!2d-85.17201974987985!3d9.638312336042578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f9f6ef143fbc881%3A0xb72d603d4bd1bd3b!2sLifeguard%20Costa%20Rica%20Santa%20Teresa!5e0!3m2!1sen!2scr!4v1707244421411!5m2!1sen!2scr" width="100%" height="100%"  allowfullscreen="" loading="lazy" ></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15701.244072506606!2d-84.8238613!3d10.3169753!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa01b494deba0af%3A0x1966da8c212bb879!2sLifeguard%20Costa%20Rica%20Monteverde!5e0!3m2!1sen!2scr!4v1709825339354!5m2!1sen!2scr" width="100%" height="100%"  allowfullscreen="" loading="lazy" ></iframe>
+                
             </div>
         </div>
     </section>
