--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="description" content="Monte Verde doctor, part of Lifeguard Costa Rica, provides fast and reliable medical services in Monte Verde, Puntarenas. Available 24/7 for emergency consultations, medical consultations, stitches, wound care, and more. Contact us now for quality medical care when you need it most.">
     <meta name="keywords" content="urgent care, doctor, Monte Verde, Lifeguard Costa Rica, doctor in Puntarenas, emergency medical services, ambulance dispatch, medical consultation, stitches, wound care, Puntarenas, medical clinic, telehealth, telemedicine, clinical laboratory, evacuation, ambulance">
     <meta property="og:url" content="https://monteverdedoctor.com/">
-    <meta property="og:site_name" content="Santa Monte Verde Doctor">
+    <meta property="og:site_name" content="Monte Verde Doctor">
     <meta property="og:title" content="Monte Verde Doctor">
     <meta property="og:description" content="24/7 available doctor when you need it most">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://i.imgur.com/cwNfTEW.jpg">
+    <meta property="og:image" content="https://i.imgur.com/pvTvcl0.png">
     <meta property="og:locale" content="en_IN">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Monte Verde Doctor">
     <meta name="twitter:description" content="Fast &amp; 24/7 available doctor">
-    <meta name="twitter:image" content="https://i.imgur.com/cwNfTEW.jpg">
+    <meta name="twitter:image" content="https://i.imgur.com/pvTvcl0.png>
     <meta name="twitter:image:alt" content="Monte Verde Doctor">
 
     <link rel="icon" href="./assets/favicon.svg" />
