--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="col">
                 <i class="fas fa-envelope contact__icon"></i>
                 <h3 class="title">Email Us</h3>
-                <p class="description">Send us an email at <a href="mailto:ops@lifeguard.co">ops@lifeguard.co</a> and we'll get back to you promptly.</p>
+                <p class="description">Send us an email at <a href="mailto:ops@lgcr.co">ops@lgcr.co</a> and we'll get back to you promptly.</p>
             </div>
 
             <div class="col">
